This is the new commit

--- a/test-output/old/Selenium1Demo/methods.html
+++ b/test-output/old/Selenium1Demo/methods.html
@@ -1,24 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Selenium1Demo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87b1af">  <td>22/02/23 08:25:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@31f9b85e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="8d977b">  <td>22/02/23 08:25:39</td>   <td>8093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@31f9b85e]">loginDDT</td> 
-  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="8d977b">  <td>22/02/23 08:25:49</td>   <td>18445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@31f9b85e]">loginDDT</td> 
-  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="8d977b">  <td>22/02/23 08:25:55</td>   <td>23994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@31f9b85e]">loginDDT</td> 
-  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="8d977b">  <td>22/02/23 08:26:05</td>   <td>34044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@31f9b85e]">loginDDT</td> 
-  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="8d977b">  <td>22/02/23 08:26:10</td>   <td>39144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@31f9b85e]">loginDDT</td> 
-  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="87b1af">  <td>22/02/23 08:26:16</td>   <td>44900</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@31f9b85e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="87b1af">  <td>22/02/23 08:26:16</td>   <td>45137</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginTest_001@424e1977]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="a6e67a">  <td>22/02/23 08:26:22</td>   <td>51001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginTest_001@424e1977]">loginTest</td> 
-  <td>main@37981645</td>   <td></td> </tr>
-<tr bgcolor="87b1af">  <td>22/02/23 08:26:22</td>   <td>51689</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginTest_001@424e1977]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@37981645</td>   <td></td> </tr>
+<tr bgcolor="707274">  <td>22/03/04 21:09:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginTest_001@26b3fd41]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="b5a082">  <td>22/03/04 21:09:29</td>   <td>6589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginTest_001@26b3fd41]">loginTest</td> 
+  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="707274">  <td>22/03/04 21:09:31</td>   <td>8774</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginTest_001@26b3fd41]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="707274">  <td>22/03/04 21:09:32</td>   <td>9737</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@7494f96a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="d477ed">  <td>22/03/04 21:09:38</td>   <td>15720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@7494f96a]">loginDDT</td> 
+  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="d477ed">  <td>22/03/04 21:09:39</td>   <td>16152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@7494f96a]">loginDDT</td> 
+  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="d477ed">  <td>22/03/04 21:09:39</td>   <td>16241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@7494f96a]">loginDDT</td> 
+  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="d477ed">  <td>22/03/04 21:09:39</td>   <td>16282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@7494f96a]">loginDDT</td> 
+  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="d477ed">  <td>22/03/04 21:09:39</td>   <td>16331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@7494f96a]">loginDDT</td> 
+  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="707274">  <td>22/03/04 21:09:39</td>   <td>16370</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@7494f96a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="707274">  <td>22/03/04 21:09:40</td>   <td>17186</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.selenium1Demo.testCases.TC_AddCustommer_03@561b6512]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="90fcbb">  <td>22/03/04 21:09:44</td>   <td>20928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustommer_03.addNewCustomerTest()[pri:0, instance:com.selenium1Demo.testCases.TC_AddCustommer_03@561b6512]">addNewCustomerTest</td> 
+  <td>main@1236444285</td>   <td></td> </tr>
+<tr bgcolor="707274">  <td>22/03/04 21:09:44</td>   <td>21588</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selenium1Demo.testCases.TC_AddCustommer_03@561b6512]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1236444285</td>   <td></td> </tr>
 </table>
