--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9adbe">  <td>22/02/24 12:42:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@3eb81efb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2082557120</td>   <td></td> </tr>
-<tr bgcolor="ec85af">  <td>22/02/24 12:43:00</td>   <td>8078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@3eb81efb]">loginDDT</td> 
-  <td>main@2082557120</td>   <td></td> </tr>
-<tr bgcolor="ec85af">  <td>22/02/24 12:43:10</td>   <td>18162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@3eb81efb]">loginDDT</td> 
-  <td>main@2082557120</td>   <td></td> </tr>
-<tr bgcolor="ec85af">  <td>22/02/24 12:43:15</td>   <td>22868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@3eb81efb]">loginDDT</td> 
-  <td>main@2082557120</td>   <td></td> </tr>
-<tr bgcolor="ec85af">  <td>22/02/24 12:43:24</td>   <td>31959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@3eb81efb]">loginDDT</td> 
-  <td>main@2082557120</td>   <td></td> </tr>
-<tr bgcolor="ec85af">  <td>22/02/24 12:43:29</td>   <td>36615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@3eb81efb]">loginDDT</td> 
-  <td>main@2082557120</td>   <td></td> </tr>
-<tr bgcolor="a9adbe">  <td>22/02/24 12:43:34</td>   <td>41623</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selenium1Demo.testCases.TC_LoginDDT_002@3eb81efb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2082557120</td>   <td></td> </tr>
+<tr bgcolor="ade7e3">  <td>22/03/12 12:26:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.selenium1Demo.testCases.TC_AddCustommer_03@934b6cb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@636782475</td>   <td></td> </tr>
+<tr bgcolor="adfd8d">  <td>22/03/12 12:26:39</td>   <td>3023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustommer_03.addNewCustomerTest()[pri:0, instance:com.selenium1Demo.testCases.TC_AddCustommer_03@934b6cb]">addNewCustomerTest</td> 
+  <td>main@636782475</td>   <td></td> </tr>
 </table>
